[gd_scene load_steps=4 format=3 uid="uid://bbklaux7uduqr"]

[ext_resource type="Script" path="res://scenes/UI/pause-menu/pause_menu.gd" id="1_hnnl2"]
[ext_resource type="FontFile" uid="uid://mt7aq4jq2jsf" path="res://assets/fonts/NotJamFontPack/Not Jam Blackletter 13/NotJamBlackletter13.ttf" id="2_q2eu3"]
[ext_resource type="FontFile" uid="uid://xfinsrs3axfv" path="res://assets/fonts/NotJamFontPack/Not Jam Signature 17/Not Jam Signature 21.ttf" id="3_c7o1l"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hnnl2")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(320, 480)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -240.0
offset_right = 160.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_q2eu3")
theme_override_font_sizes/font_size = 52
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReturnButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_c7o1l")
theme_override_font_sizes/font_size = 42
text = "Return to Game"

[node name="RestartButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_c7o1l")
theme_override_font_sizes/font_size = 42
text = "Restart Game"

[node name="QuitButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_c7o1l")
theme_override_font_sizes/font_size = 42
text = "Quit to Desktop"

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
